# git-ai

./: .git-ai  .git-ai-example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: add.rs  ai.rs  branding.rs  commit.rs  config.rs  filters.rs  git_runner.rs  hooks.rs  hunk.rs  interact.rs  main.rs  prompts.rs  push.rs  staging.rs  utils.rs  web.rs
src/commands/: add.rs  clone.rs  commit.rs  git_runner.rs  ignore.rs  init.rs  interact.rs  mod.rs  pull.rs  push.rs  staging.rs  stash.rs  status.rs
src/llms/: azure.rs  backend.rs  claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
