[package]
name = "git-ai"
version = "0.1.0"
edition = "2021"
authors = ["aravind gopal <aravindgopal.ag@gmail.com>"]
license = "MIT"
description = "Git diff and commit helper with AI and natural language."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
indicatif = "0.17"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
git2 = "0.18"
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
reqwest = { version = "0.11", features = ["json"] }
async-std = "1.12"
rand = "0.9.1"
terminal_size = "0.2"
glob = "0.3"
